--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="registering_message">Registered Notification</string>
     <string name="title_activity_groups">GroupsActivity</string>
     <string name="title_activity_notification">NotificationActivity</string>
+    <string name="noGroupWM">You have no groups yet! Get Started!</string>
+    <string name="Logout">Logout</string>
 </resources>
