Contacts View added
Search for contacts from hash map and then display in the contacts list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="title_activity_notification">NotificationActivity</string>
     <string name="noGroupWM">You have no groups yet! Get Started!</string>
     <string name="Logout">Logout</string>
+    <string name="title_activity_contacts">Select Contacts</string>
+    <string name="AddContact">+</string>
 </resources>
